// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniProtEvidenceTag components should render ProtVista evidence tag 1`] = `
Array [
  TemplateResult {
    "processor": DefaultTemplateProcessor {},
    "strings": Array [
      "
        <span
          class=",
      "
          @click=",
      "
        >
          ",
      "
          ",
      "</span
        >
      ",
    ],
    "type": "html",
    "values": Array [
      "evidence-tag svg-colour-unreviewed",
      [Function],
      [Function],
      "Imported",
    ],
  },
]
`;

exports[`UniProtEvidenceTag components should render automatic  1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-unreviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      Imported
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion inferred from database entries
      </h5>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render automatic annotation 1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      1 automatic annotation
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Automatic assertion according to rules
      </h5>
      <a
        class="external-link"
        href="https://prosite.expasy.org/unirule/PRU10023"
        target="_blank"
      >
        PRU10023
        <svg
          viewBox="0 0 576 512"
          width="12.5"
        >
          <path
            d="M576 24v127.984c0 21.461-25.96 31.98-40.971 16.971l-35.707-35.709-243.523 243.523c-9.373 9.373-24.568 9.373-33.941 0l-22.627-22.627c-9.373-9.373-9.373-24.569 0-33.941L442.756 76.676l-35.703-35.705C391.982 25.9 402.656 0 424.024 0H552c13.255 0 24 10.745 24 24zM407.029 270.794l-16 16A23.999 23.999 0 00384 303.765V448H64V128h264a24.003 24.003 0 0016.97-7.029l16-16C376.089 89.851 365.381 64 344 64H48C21.49 64 0 85.49 0 112v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V287.764c0-21.382-25.852-32.09-40.971-16.97z"
          />
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`UniProtEvidenceTag components should render publications count 1`] = `
<DocumentFragment>
  <span
    class="evidence-tag svg-colour-reviewed"
    data-testid="evidence-tag-trigger"
    role="button"
    tabindex="0"
  >
    <svg
      fill="none"
      height="12"
      viewBox="0 0 10 15"
      width="12"
    >
      <path
        clip-rule="evenodd"
        d="M10 0H0v15h.051L5 10l4.949 5H10V0z"
        fill="#4E5A71"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="evidence-tag__label"
      title=""
    >
      2 publications
    </span>
  </span>
  <div
    class="evidence-tag-content "
    data-testid="evidence-tag-content"
  >
    <div>
      <h5>
        Manual assertion based on experiment
      </h5>
    </div>
  </div>
</DocumentFragment>
`;
